# school_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260203_060457_673db434f7dd_initial_schema.py  20260203_084017_c7c4a9735a31_add_user_language.py  20260204_024952_a2ed5283eeed_add_user_theme.py
app/: __init__.py  cli.py
app/api/v1/: router.py
app/api/v1/routes/: auth.py  classes.py  discounts.py  employees.py  expense_categories.py  expenses.py  invoices.py  payments.py  positions.py  recurring_expenses.py  reports.py  schools.py  students.py  (+2 more)
app/core/: config.py  database.py  deps.py  permissions.py  security.py
app/models/: __init__.py  discount.py  expense.py  invoice.py  school.py  school_class.py  student.py  user.py
app/schemas/: __init__.py  auth.py  discount.py  employee.py  expense.py  expense_category.py  invoice.py  payment.py  position.py  recurring_expense.py  report.py  school.py  school_class.py  student.py  user.py  validators.py
app/services/: auth.py  discount.py  employee.py  expense.py  expense_category.py  invoice.py  payment.py  position.py  recurring_expense.py  report.py  school.py  school_class.py  student.py  user.py
tests/: conftest.py  test_auth.py  test_classes.py  test_discounts.py  test_employees.py  test_expense_categories.py  test_expenses.py  test_invoices.py  test_payments.py  test_positions.py  test_recurring_expenses.py  test_reports.py  test_schools.py  test_students.py  test_users.py  test_validators.py
